--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -47,10 +47,6 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 
 ### Upcoming
 
-- Friday 21 June 2024, noon (EDT)
-	- **Chris Bail**, Duke University
-	- "Can Generative AI Improve Social Science"
-	- [Chris Bail](https://www.chrisbail.net/bio) is Professor of Sociology, Political Science, and Public Policy at Duke University, where he founded the Polarization Lab. He studies how artificial intelligence shapes human behavior in a range of different settings—and social media platforms in particular.
 - Wednesday 26 June 2024, 1pm (EDT)
 	- **Matthew Gentzkow**, Stanford University
 	- "The effects of Facebook and Instagram on the 2020 election: A deactivation experiment"
@@ -84,7 +80,9 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
   - **Majeed Kazemitabaar**, University of Toronto
   - "Improving Steering and Verification in AI-Assisted Data Analysis"
   - [Majeed Kazemitabaar](https://www.majeed.cc) is a fourth-year Ph.D. student in Computer Science at the University of Toronto, working with Professor Tovi Grossman. His research in Human-Computer Interaction and Computer Science Education focuses on creating engaging computational learning experiences and has been published in CHI, UIST, and IDC, and earned Best Paper and Best Late-Breaking Work awards.
-- August: No talks
+
+-------------
+
 - Friday 6 September 2024, noon (EDT)
   - TBA
 - Friday 13 September 2024, noon (EDT)
@@ -100,6 +98,7 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 	- [Sean Taylor](https://seanjtaylor.com/) is a data scientist, social scientist, statistician, and software developer. He mostly specializes in methods for solving causal inference and business decision problems, and is particularly interested in building tools for practitioners working on real-world problems. He is a co-founder and chief scientist at [Motif](https://www.motifanalytics.com/).
 - Friday 11 October 2024, noon (EDT)
 	- **Rachel Glennerster**, University of Chicago
+	- "Combining both randomized and nonrandomized variation in one estimation"
 	- [Rachel Glennerster](https://rglennerster.ssd.uchicago.edu/) is an Associate Professor of Economics in the Division of Social Science at the University of Chicago. She uses randomized trials to study democracy and accountability, health, education, microfinance, and women’s empowerment mainly in West Africa and South Asia. She has also written on strategies to stimulate innovation, promoting more equitable access to vaccines, and the response to Ebola and COVID-19 pandemics.
 - Friday 18 October 2024, noon (EDT)
 	- **Xiaojun Su**, Unilever
@@ -108,15 +107,15 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 	- TBA
 - Friday 1 November 2024, noon (EDT)
 	- TBA
-- Friday 8 November 2024, noon (EDT)
+- Friday 8 November 2024, noon (EST)
 	- **Jacob Baldwin**, Pro Football Focus	(PFF)
 	- [Jacob Baldwin](https://www.linkedin.com/in/jacob-baldwin-51849b106/) is a Senior Data Scientist at PFF. He holds an online M.S. degree in Applied Mathematics from the University of Washington, and graduated from Clarkson University with a B.S. in Physics, a B.S. in Applied Mathematics, and a minor in Computer Science.
-- Friday 15 November 2024, noon (EDT)
+- Friday 15 November 2024, noon (EST)
 	- **Crystal Lewis**, Crystal Lewis Consulting LLC
 	- [Crystal Lewis](https://cghlewis.com/) is a freelance consultant and trainer with over 10 years of experience as a data manager in the field of education research. She is also the author of the book *Data Management in Large-Scale Education Research*, which provides a holistic overview of how to manage research data throughout a project life cycle. It is available [freely online](https://datamgmtinedresearch.com/) and a hard copy is [available for purchase](https://www.routledge.com/Data-Management-in-Large-Scale-Education-Research/Lewis/p/book/9781032622798) from Taylor and Francis CRC Press.
-- Friday 22 November 2024, noon (EDT)
+- Friday 22 November 2024, noon (EST)
 	- TBA
-- Friday 29 November 2024, noon (EDT)
+- Friday 29 November 2024, noon (EST)
   - **Claire Le Barbenchon**, McKinsey & Company
   - [Claire Le Barbenchon](https://www.linkedin.com/in/clairelebarbenchon/) is an Associate at McKinsey & Company. She is passionate about turning evidence into impact. As a management consultant with a specialty in quantitative and financial analysis, she has supported large-scale transformations across multiple Fortune 500 companies in the consumer/retail sector. She has also drawn on 8 years of experience in the public, nonprofit and research sectors to support strategy development and the generation of evidence for programming across social sector clients. She holds a PhD in Public Policy and an MS in Statistical Science.
 
