--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -64,9 +64,9 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 	- [Naman Jain](https://naman-ntc.github.io) is a CS Ph.D. student at UC Berkeley, focusing on using machine learning to enhance developer productivity tools like program analysis, synthesis, and repair. He also explores how synthesis and verification can improve algorithm generalizability and explainability. He holds an undergraduate degree from IIT Bombay, where he researched NLP robustness and computer vision. Before his Ph.D., he was a predoctoral research fellow at Microsoft Research India, working on program repair, improving large language models, and learning decision trees.
 - Thursday 18 July 2024, noon (EDT)
   - **Hannah Rose Kirk**, Oxford Internet Institute, University of Oxford
-  - "THE PRISM Alignment Project"
-  - The PRISM Alignment Project collects disaggregated feedback from a diverse collection of 1,500 participants from 75 countries based on how they converse with over 20 LLMs in real-time. This addresses the concern that human feedback learning in AI systems was collected from a narrow and unrepresentative set of crowdworkers. Details are available in the [pre-print](https://arxiv.org/abs/2404.16019) or the [project page](https://hannahkirk.github.io/prism-alignment/).
-  - [Hannah Rose Kirk](https://www.hannahrosekirk.com) is a DPhil candidate in Social Data Science at the Oxford Internet Institute, University of Oxford, with a research focus on the alignment of LLMs through granular and diverse human feedback. Her research has been published in venues including *Nature Machine Intelligence*, *NAACL*, *EMNLP*, and *NeurIPs*. She has previously worked with researchers at NYU, Google, OpenAI, and The Alan Turing Institute.
+  - "What does it mean for AI to be “aligned”?"
+  - Alignment has become a buzzword that frequently surfaces throughout the AI ecosystem. But what does it mean to align LLMs to the hundreds of millions of people who now interact with their outputs, each with different preferences for language, conversational norms, value systems, and political beliefs? This talk will explore the gnarly concept of alignment, specifically for large language models (LLMs). Using insights from the recently released [PRISM Alignment Dataset](https://hannahkirk.github.io/prism-alignment/), we'll cover key questions around empirical alignment efforts, such as how to collect human feedback using various scales and signals, where to focus human labour, who to ask for feedback, and whether to target objectives of personalised or collective alignment. Through more comprehensive and representative data, PRISM highlights the challenges of aligning LLMs to meet the diverse expectations and beliefs of a global audience.
+  - [Hannah Rose Kirk](https://www.hannahrosekirk.com) is a PhD student at the University of Oxford, UK. Hannah's research centres on the role of granular and diverse human feedback for aligning large language models. Her body of published work spans computational linguistics, computer vision, ethics and sociology, addressing a broad range of issues such as AI safety, bias, fairness, and hate speech from a multidisciplinary perspective. Hannah holds degrees from the University of Oxford, the University of Cambridge and Peking University. Alongside academia, she collaborates often with industry projects at Google, OpenAI and MetaAI, and previously worked as a Data Scientist in the Public Policy Team at The Alan Turing Institute.
 - Friday 19 July 2024, noon (EDT) (in-person and online)
   - **Majeed Kazemitabaar**, University of Toronto
   - "Improving Steering and Verification in AI-Assisted Data Analysis"
